--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Introuduçãoao Javascript</title>
+</head>
+<body>
+    <h1>Aprendendo Javascript </h1>
+
+  <script>
+    <src="index.js">
+  </script>
+</body>
+</html>
